src/Mona_WebApp/mona.java
/* Generated By:JJTree&JavaCC: Do not edit this line. mona.java */
import java.io.BufferedWriter;
import java.io.FileWriter;
import java.io.IOException;
import java.util.*;
public class mona/*@bgen(jjtree)*/implements monaTreeConstants, monaConstants {/*@bgen(jjtree)*/
  protected static JJTmonaState jjtree = new JJTmonaState();public static STC ST = new STC();
        public static String scope = "global";
        public static String classScope = "";
        public static int line = 1 ;
        public static void main(String args []){
                mona mona_parser;
                if(args.length == 0){
                        // reading input from the command line (used for testing purposes)
                        System.out.println("Reading from standard input . . .");
                        mona_parser = new mona(System.in);
                }
                else if(args.length == 1){
                        // taking in mona file as an argument as per assignment specification
                        try{
                                mona_parser = new mona(new java.io.FileInputStream(args[0]));
                        }
                        catch(java.io.FileNotFoundException e){
                                System.err.println("File " + args[0] + " not found.");
                                return;
                        }
                }

                else{
                        System.out.println("mona:  Usage is one of:");
                        System.out.println("java mona < inputfile");
                        System.out.println("OR");
                        System.out.println("java mona inputfile");
                        return;
                }

                try{
                    SimpleNode root =     mona_parser.program();
                    System.out.println("----------------------Abstract Syntax tree ----------------------");
                    root.dump("");
                    System.out.println("mona Parser: mona program parsed successfully."); // success message
                    System.out.println("----------------------Symbol Table----------------------");
                    ST.print();
                    TypeCheckVisitor tcv = new TypeCheckVisitor();
                    System.out.println("----------------------Semantic Analysis------------------");
                    root.jjtAccept(tcv, ST);


                    try
     {
             BufferedWriter buff = new BufferedWriter (new FileWriter ("irFileName"));
             IrCodeVisitor irGenerator = new IrCodeVisitor ();
             root.jjtAccept (irGenerator, ST);
             buff.flush ();

         }
     catch (IOException e)
     {
             System.out.println ("Failed to write LLVM code to file. Exception: ");
             e.printStackTrace (System.out);
         }
         System.out.println ("LLVM code generated");


                } catch (ParseException e){
                        System.out.println(e.getMessage()); // catching error
                        System.out.println("mona Parser:  Encountered errors during parse."); // failure message
                }


        }

/**********************************************
* SECTION 4 - THE GRAMMAR & PRODUCTION RULES *
***********************************************/
  static final public SimpleNode program() throws ParseException {
                                 /*@bgen(jjtree) Program */
  ASTProgram jjtn000 = new ASTProgram(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      decl_list();
      function_list();
      class_list();
      main();
                                                      jjtree.closeNodeScope(jjtn000, true);
                                                      jjtc000 = false;
     {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void decl_list() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
    case CONST:
      decl();
      decl_list();
      break;
    default:
      jj_la1[0] = jj_gen;

    }
  }

  static final public String decl() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
      var_decl();
      break;
    case CONST:
      const_decl();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                 {if (true) return "decl";}
    throw new Error("Missing return statement in function");
  }

  static final public void var_decl() throws ParseException {
                                         /*@bgen(jjtree) VariableDeclaration */
                                         ASTVariableDeclaration jjtn000 = new ASTVariableDeclaration(JJTVARIABLEDECLARATION);
                                         boolean jjtc000 = true;
                                         jjtree.openNodeScope(jjtn000);Token t; String id; String type;
    try {
      t = jj_consume_token(VAR);
      type = type();
      id = identifier();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        assign();
                                                             ASTassigns jjtn001 = new ASTassigns(JJTASSIGNS);
                                                             boolean jjtc001 = true;
                                                             jjtree.openNodeScope(jjtn001);
        try {
          expression();
        } catch (Throwable jjte001) {
                                                             if (jjtc001) {
                                                               jjtree.clearNodeScope(jjtn001);
                                                               jjtc001 = false;
                                                             } else {
                                                               jjtree.popNode();
                                                             }
                                                             if (jjte001 instanceof RuntimeException) {
                                                               {if (true) throw (RuntimeException)jjte001;}
                                                             }
                                                             if (jjte001 instanceof ParseException) {
                                                               {if (true) throw (ParseException)jjte001;}
                                                             }
                                                             {if (true) throw (Error)jjte001;}
        } finally {
                                                             if (jjtc001) {
                                                               jjtree.closeNodeScope(jjtn001, true);
                                                             }
        }

        break;
      default:
        jj_la1[2] = jj_gen;

      }
      jj_consume_token(SEMIC);
        jjtree.closeNodeScope(jjtn000, true);
        jjtc000 = false;
             jjtn000.value = t.image;
             ST.insert(id, type, "variable", classScope+scope);
    } catch (Throwable jjte000) {
         if (jjtc000) {
           jjtree.clearNodeScope(jjtn000);
           jjtc000 = false;
         } else {
           jjtree.popNode();
         }
         if (jjte000 instanceof RuntimeException) {
           {if (true) throw (RuntimeException)jjte000;}
         }
         if (jjte000 instanceof ParseException) {
           {if (true) throw (ParseException)jjte000;}
         }
         {if (true) throw (Error)jjte000;}
    } finally {
         if (jjtc000) {
           jjtree.closeNodeScope(jjtn000, true);
         }
    }
  }

  static final public void const_decl() throws ParseException {
                                           /*@bgen(jjtree) ConstantDeclaration */
                                           ASTConstantDeclaration jjtn000 = new ASTConstantDeclaration(JJTCONSTANTDECLARATION);
                                           boolean jjtc000 = true;
                                           jjtree.openNodeScope(jjtn000);Token t; String id ; String type ;
    try {
      t = jj_consume_token(CONST);
      type = type();
      id = identifier();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        assign();
        expression();
        break;
      default:
        jj_la1[3] = jj_gen;

      }
      jj_consume_token(SEMIC);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
           jjtn000.value = t.image;
           ST.insert(id, type, "variable",classScope + scope);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void function_list() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case BOOL:
    case VOID:
    case DICT:
    case STRING:
    case LSBR:
    case FLOAT:
      function();
      function_list();
      break;
    default:
      jj_la1[4] = jj_gen;

    }
  }

  static final public void function() throws ParseException {
                             /*@bgen(jjtree) function */
                             ASTfunction jjtn000 = new ASTfunction(JJTFUNCTION);
                             boolean jjtc000 = true;
                             jjtree.openNodeScope(jjtn000);Token t ; String id; String type;
    try {
      type = type();
      id = identifier();
         jjtn000.value = id;
         ST.insert(id,type,"function",scope);
         scope = id ;
      jj_consume_token(LBR);
      parameter_list();
      jj_consume_token(RBR);
      jj_consume_token(LCBR);
      decl_list();
      statement_block();
      return_();
      jj_consume_token(RCBR);
             jjtree.closeNodeScope(jjtn000, true);
             jjtc000 = false;
            scope = "global";
    } catch (Throwable jjte000) {
       if (jjtc000) {
         jjtree.clearNodeScope(jjtn000);
         jjtc000 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte000 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte000;}
       }
       if (jjte000 instanceof ParseException) {
         {if (true) throw (ParseException)jjte000;}
       }
       {if (true) throw (Error)jjte000;}
    } finally {
       if (jjtc000) {
         jjtree.closeNodeScope(jjtn000, true);
       }
    }
  }

  static final public void return_() throws ParseException {
                           /*@bgen(jjtree) return_ */
  ASTreturn_ jjtn000 = new ASTreturn_(JJTRETURN_);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(RETURN);
      jj_consume_token(LBR);
      return_list();
      jj_consume_token(RBR);
      jj_consume_token(SEMIC);
    } catch (Throwable jjte000) {
       if (jjtc000) {
         jjtree.clearNodeScope(jjtn000);
         jjtc000 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte000 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte000;}
       }
       if (jjte000 instanceof ParseException) {
         {if (true) throw (ParseException)jjte000;}
       }
       {if (true) throw (Error)jjte000;}
    } finally {
       if (jjtc000) {
         jjtree.closeNodeScope(jjtn000, true);
       }
    }
  }

  static final public void return_list() throws ParseException {
    expression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      return_list();
      break;
    default:
      jj_la1[5] = jj_gen;

    }
  }

  static final public String type() throws ParseException {
                       /*@bgen(jjtree) Type */
                       ASTType jjtn000 = new ASTType(JJTTYPE);
                       boolean jjtc000 = true;
                       jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        t = jj_consume_token(INT);
        break;
      case BOOL:
        t = jj_consume_token(BOOL);
        break;
      case VOID:
        t = jj_consume_token(VOID);
        break;
      case STRING:
        t = jj_consume_token(STRING);
        break;
      case LSBR:
        t = jj_consume_token(LSBR);
        type();
        jj_consume_token(RSBR);
        break;
      case FLOAT:
        t = jj_consume_token(FLOAT);
        break;
      case DICT:
        t = jj_consume_token(DICT);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
       jjtree.closeNodeScope(jjtn000, true);
       jjtc000 = false;
      jjtn000.value = t.image;
     {if (true) return t.image;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void parameter_list() throws ParseException {
                                         /*@bgen(jjtree) parameter_list */
  ASTparameter_list jjtn000 = new ASTparameter_list(JJTPARAMETER_LIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case BOOL:
      case VOID:
      case DICT:
      case STRING:
      case LSBR:
      case FLOAT:
        nemp_parameter_list();
        break;
      default:
        jj_la1[7] = jj_gen;
                               jjtree.closeNodeScope(jjtn000, true);
                               jjtc000 = false;

      }
    } catch (Throwable jjte000) {
       if (jjtc000) {
         jjtree.clearNodeScope(jjtn000);
         jjtc000 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte000 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte000;}
       }
       if (jjte000 instanceof ParseException) {
         {if (true) throw (ParseException)jjte000;}
       }
       {if (true) throw (Error)jjte000;}
    } finally {
       if (jjtc000) {
         jjtree.closeNodeScope(jjtn000, true);
       }
    }
  }

  static final public void nemp_parameter_list() throws ParseException {
                               String id; String type ;
    type = type();
    id = identifier();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      nemp_parameter_list();
      break;
    default:
      jj_la1[8] = jj_gen;

    }
      ST.insert(id, type, "parameter", classScope + scope);
  }

  static final public void main() throws ParseException {
                   /*@bgen(jjtree) main */
  ASTmain jjtn000 = new ASTmain(JJTMAIN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
       scope ="main";
      jj_consume_token(MAIN);
      jj_consume_token(LCBR);
      decl_list();
      statement_block();
      jj_consume_token(RCBR);
    } catch (Throwable jjte000) {
        if (jjtc000) {
          jjtree.clearNodeScope(jjtn000);
          jjtc000 = false;
        } else {
          jjtree.popNode();
        }
        if (jjte000 instanceof RuntimeException) {
          {if (true) throw (RuntimeException)jjte000;}
        }
        if (jjte000 instanceof ParseException) {
          {if (true) throw (ParseException)jjte000;}
        }
        {if (true) throw (Error)jjte000;}
    } finally {
        if (jjtc000) {
          jjtree.closeNodeScope(jjtn000, true);
        }
    }
  }

  static final public void statement_block() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
    case CONST:
    case BREAK:
    case IF:
    case PRINT:
    case WHILE:
    case FOR:
    case SKIP_mona:
    case LCBR:
    case IDENTIFIER:
      statement();
      statement_block();
      break;
    default:
      jj_la1[9] = jj_gen;

    }
  }

  static final public void statement() throws ParseException {
                               /*@bgen(jjtree) statement */
                               ASTstatement jjtn000 = new ASTstatement(JJTSTATEMENT);
                               boolean jjtc000 = true;
                               jjtree.openNodeScope(jjtn000);Token t; String r ;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        identifier();
        r = statement_Left_factor_IDENTIFIER();
                                                         jjtree.closeNodeScope(jjtn000, true);
                                                         jjtc000 = false;
                                                         jjtn000.value = r;
        break;
      case LCBR:
        jj_consume_token(LCBR);
        statement_block();
        jj_consume_token(RCBR);
        break;
      case IF:
        t = jj_consume_token(IF);
        condition();
        jj_consume_token(LCBR);
        statement_block();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case RETURN:
          return_();
          break;
        default:
          jj_la1[10] = jj_gen;

        }
        jj_consume_token(RCBR);
        else_if_list();
        else_();
                jjtree.closeNodeScope(jjtn000, true);
                jjtc000 = false;
                jjtn000.value = t.image;
        break;
      case WHILE:
        t = jj_consume_token(WHILE);
        condition();
        jj_consume_token(LCBR);
        statement_block();
        jj_consume_token(RCBR);
                                                                 jjtree.closeNodeScope(jjtn000, true);
                                                                 jjtc000 = false;
                                                                 jjtn000.value = t.image;
        break;
      case FOR:
        t = jj_consume_token(FOR);
        jj_consume_token(LBR);
        identifier();
        jj_consume_token(IN);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NUM:
        case FLOAT:
        case IDENTIFIER:
        case QUOTED_STRING:
          values();
          break;
        case LCBR:
          dictionary();
          break;
        case LSBR:
          array();
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(RBR);
        jj_consume_token(LCBR);
        statement_block();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case RETURN:
          return_();
          break;
        default:
          jj_la1[12] = jj_gen;

        }
        jj_consume_token(RCBR);
                                                           jjtree.closeNodeScope(jjtn000, true);
                                                           jjtc000 = false;
                                                           jjtn000.value = t.image;
        break;
      case SKIP_mona:
        jj_consume_token(SKIP_mona);
        jj_consume_token(SEMIC);
        break;
      case VAR:
      case CONST:
        r = decl();
                    jjtree.closeNodeScope(jjtn000, true);
                    jjtc000 = false;
                    jjtn000.value = r;
        break;
      case PRINT:
        t = jj_consume_token(PRINT);
        identifier();
        jj_consume_token(SEMIC);
                                           jjtree.closeNodeScope(jjtn000, true);
                                           jjtc000 = false;
                                           jjtn000.value = t.image;
        break;
      case BREAK:
        break_();
        jj_consume_token(SEMIC);
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void else_() throws ParseException {
                 Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      ASTstatement jjtn001 = new ASTstatement(JJTSTATEMENT);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
      try {
        t = jj_consume_token(ELSE);
                  jjtn001.value = t.image;
        jj_consume_token(LCBR);
        statement_block();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case RETURN:
          return_();
          break;
        default:
          jj_la1[14] = jj_gen;

        }
        jj_consume_token(RCBR);
      } catch (Throwable jjte001) {
      if (jjtc001) {
        jjtree.clearNodeScope(jjtn001);
        jjtc001 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte001 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte001;}
      }
      if (jjte001 instanceof ParseException) {
        {if (true) throw (ParseException)jjte001;}
      }
      {if (true) throw (Error)jjte001;}
      } finally {
      if (jjtc001) {
        jjtree.closeNodeScope(jjtn001, true);
      }
      }
      break;
    default:
      jj_la1[15] = jj_gen;

    }
  }

  static final public void else_if_list() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSEIF:
      else_if();
      else_if_list();
      break;
    default:
      jj_la1[16] = jj_gen;

    }
  }

  static final public void else_if() throws ParseException {
                           /*@bgen(jjtree) else_if */
                           ASTelse_if jjtn000 = new ASTelse_if(JJTELSE_IF);
                           boolean jjtc000 = true;
                           jjtree.openNodeScope(jjtn000);Token t ;
    try {
      t = jj_consume_token(ELSEIF);
      condition();
      jj_consume_token(LCBR);
      statement_block();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RETURN:
        return_();
        break;
      default:
        jj_la1[17] = jj_gen;
